app/styles/style.scss
html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
//  min-height: 768px;
}

body {
  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
  line-height: 1.4em;
  background: #eaeaea url('../images/bg.png');
  color: #4d4d4d;
  width: 100%;
  min-height: 700px;
  height: 100%;
  margin: 0 auto;
  -webkit-font-smoothing: antialiased;
  -moz-font-smoothing: antialiased;
  -ms-font-smoothing: antialiased;
  -o-font-smoothing: antialiased;
  font-smoothing: antialiased;
}

button,
input[type="checkbox"] {
  outline: none;
}

body>div{
  height: 100%;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

@import 'mixins';
@import 'proto-app';
@import 'canvas';
@import 'editor';
@import 'property-inspector';
@import 'project-tree';

